--- a/app/views/wiki_viewer/home.html.erb
+++ b/app/views/wiki_viewer/home.html.erb
@@ -1,10 +1,11 @@
-
+<div class="container-fluid">
 <div class="row">
-  <div class="span6 offset3">
+  <div class="span6" >
 	<%= form_tag("search", method: "get") do %>
-	  <%= label_tag(:q, "Search for:") %>
+	  <%= label_tag(:q, "http://") %>
 	  <%= text_field_tag(:q) %>
-	  <%= submit_tag("Search") %>
+	  <%= submit_tag "Search", class: "btn btn-mid btn-primary" %>
 	<% end %>
   </div>
+</div>
 </div>
