--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,9 +2,15 @@
 
 body{
 	padding-top: 30px;
+	padding-bottom: 100px;
 	background-color:#C7EDCC
 }
 
 label {
 	display:inline;
+}
+
+.navbar-default {
+    background-color: #F8F8F8;
+    border-color: #E7E7E7;
 }
