--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>WikiViewer</title>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -13,6 +13,36 @@
 
 
 
+<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+
+<div class="container-fluid">
+
+ 
+      <ul class="nav navbar-nav">
+        <li><a href="/"><span class="glyphicon glyphicon-home"></span><span class="glyphicon-class">Home</span></a></li>
+		
+        <li><a href="javascript:history.back()">Back</a></li>
+		
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Font<b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><button type="submit" id="plus" class="btn btn-default">plus</button></li>
+            <li><button type="submit" id="minus" class="btn btn-default">minus</button></li>
+          </ul>
+        </li>
+		
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Background<b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><button type="submit" id="green" class="btn btn-default">green</button><button type="submit" id="brown" class="btn btn-default">brown</button></li>
+            <li><button type="submit" id="night" class="btn btn-default">night</button><button type="submit" id="white" class="btn btn-default">white</button></li>
+          </ul>
+        </li>
+		
+      </ul>
+
+</div>
+</nav>
 
 
 </body>
