--- a/app/views/wiki_viewer/home.html.erb
+++ b/app/views/wiki_viewer/home.html.erb
@@ -7,5 +7,6 @@
 	  <%= submit_tag "Search", class: "btn btn-mid btn-primary" %>
 	<% end %>
   </div>
+  <a id="link" href="#">click me</a>
 </div>
 </div>
