--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<span id="top"></span>
+<div class="jumbotron">
+<div class="container row-fluid">
+	<h1 class="text-center">WikiViewer</h1>
+	</div>
+</div>
 <%= yield %>
 
 
@@ -26,8 +31,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Font<b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><button type="submit" id="plus" class="btn btn-default">plus</button></li>
-            <li><button type="submit" id="minus" class="btn btn-default">minus</button></li>
+            <li><button type="submit" id="plus" class="btn btn-default">+</button></li>
+            <li><button type="submit" id="minus" class="btn btn-default">-</button></li>
           </ul>
         </li>
 		
@@ -37,7 +42,15 @@
             <li><button type="submit" id="green" class="btn btn-default">green</button><button type="submit" id="brown" class="btn btn-default">brown</button></li>
             <li><button type="submit" id="night" class="btn btn-default">night</button><button type="submit" id="white" class="btn btn-default">white</button></li>
           </ul>
+
         </li>
+        <li class="dropdown">
+		<a href="#" class="dropdown-toggle" data-toggle="dropdown">QR code<b class="caret"></b></a>
+          <ul class="dropdown-menu">
+		  <li><img src="https://api.qrserver.com/v1/create-qr-code/?data=<%= request.original_url %>&amp;size=100x100" alt="" title="" /></li>
+		  </ul>
+		</li>
+		<li><a href="#top">Top</a></li>
 		
       </ul>
 
