--- a/app/views/wiki_viewer/home.html.erb
+++ b/app/views/wiki_viewer/home.html.erb
@@ -1,12 +1,17 @@
 <div class="container-fluid">
-<div class="row">
+<div class="row-fluid">
+ <div class="span3"></div>
   <div class="span6" >
 	<%= form_tag("search", method: "get") do %>
 	  <%= label_tag(:q, "http://") %>
 	  <%= text_field_tag(:q) %>
 	  <%= submit_tag "Search", class: "btn btn-mid btn-primary" %>
 	<% end %>
+	<p> To view wiki pages in eye-friendly color themes, <br>
+	please input a Wikisource/Wikibook/Wikipedia url to start! <br>
+	(e.g. en.wikisource.org/wiki/Anna_Karenina)</p>
+	
   </div>
-  <a id="link" href="#">click me</a>
+   <div class="span3"></div>
 </div>
 </div>
