--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,24 +30,25 @@
 		
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Font<b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><button type="submit" id="plus" class="btn btn-default">+</button></li>
+          <ul class="dropdown-menu text-center font-menu">
+            <li ><button type="submit" id="plus" class="btn btn-default">+</button></li>
             <li><button type="submit" id="minus" class="btn btn-default">-</button></li>
           </ul>
         </li>
 		
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Background<b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><button type="submit" id="green" class="btn btn-default">green</button><button type="submit" id="brown" class="btn btn-default">brown</button></li>
-            <li><button type="submit" id="night" class="btn btn-default">night</button><button type="submit" id="white" class="btn btn-default">white</button></li>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Theme<b class="caret"></b></a>
+          <ul class="dropdown-menu theme-menu text-center">
+            <li><button type="submit" id="apple" class="btn btn-default">apple</button></li>
+            <li><button type="submit" id="night" class="btn btn-default">night</button></li>
+			<li><button type="submit" id="white" class="btn btn-default">white</button></li>
           </ul>
 
         </li>
         <li class="dropdown">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown">QR code<b class="caret"></b></a>
-          <ul class="dropdown-menu">
-		  <li><img src="https://api.qrserver.com/v1/create-qr-code/?data=<%= request.original_url %>&amp;size=100x100" alt="" title="" /></li>
+          <ul class="dropdown-menu text-center">
+		  <li><br><img src="https://api.qrserver.com/v1/create-qr-code/?data=<%= request.original_url %>&amp;size=100x100" alt="" title="" /></li>
 		  </ul>
 		</li>
 		<li><a href="#top">Top</a></li>
