--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
         <li class="dropdown">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown">QR code<b class="caret"></b></a>
           <ul class="dropdown-menu text-center">
-		  <li><br><img src="https://api.qrserver.com/v1/create-qr-code/?data=<%= request.original_url %>&amp;size=100x100" alt="" title="" /></li>
+		  <li><img src="https://api.qrserver.com/v1/create-qr-code/?data=<%= request.original_url %>&amp;size=100x100" alt="" title="" /></li>
 		  </ul>
 		</li>
 		<li><a href="#top">Top</a></li>
