home page description changed

--- a/app/views/wiki_viewer/home.html.erb
+++ b/app/views/wiki_viewer/home.html.erb
@@ -8,8 +8,10 @@
 	  <%= submit_tag "Go", class: "btn btn-mid btn-primary" %>
 	<% end %>
 	<p> To view wiki pages in eye-friendly color themes, <br>
-	please input a Wikisource/Wikibooks/Wikipedia url to start! <br>
+	please input a Wikisource/Wikibooks/Wikipedia/etc. url to start! <br>
 	(e.g. en.wikisource.org/wiki/Anna_Karenina)</p>
+	
+	<p>I make this for myself to read the books at <strong>Wikisource</strong> on my smartphone. Complicated pages may not work good.</p>
 	
   </div>
    <div class="span3"></div>
