--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,7 +3,8 @@
 body{
 	padding-top: 30px;
 	padding-bottom: 100px;
-	background-color:#FFFFFF
+	background-color:#FFFFFF;
+	font-size:16px;
 }
 
 h1 {
