minor change: typo fixed

--- a/app/views/wiki_viewer/home.html.erb
+++ b/app/views/wiki_viewer/home.html.erb
@@ -13,7 +13,7 @@
 	
 	<p>I make this for myself to read the books at <strong>Wikisource</strong> on my smartphone. Complicated pages may not work good.</p>
 	
-	<p>Cookie is required.</p>
+	<p>Cookies is required.</p>
 
 	</div>
    <div class="span3"></div>
