minor change: typo fixed

--- a/app/views/wiki_viewer/home.html.erb
+++ b/app/views/wiki_viewer/home.html.erb
@@ -11,7 +11,7 @@
 	please input a Wikisource/Wikibooks/Wikipedia/etc. url to start! <br>
 	(e.g. en.wikisource.org/wiki/Anna_Karenina)</p>
 	
-	<p>I make this for myself to read the books at <strong>Wikisource</strong> on my smartphone. Complicated pages may not work good.</p>
+	<p>I made this for myself to read the books at <strong>Wikisource</strong> on my smartphone. Complicated pages may not work good.</p>
 	
 	<p>Cookies is required.</p>
 
