--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,12 +52,22 @@
 		  </ul>
 		</li>
 		<li><a href="#top">Top</a></li>
+		<li>
+			<a data-toggle="modal" href="#myModal" class="myclass">Enquiry</a>
+		</li>
+		
 		
       </ul>
 
 </div>
 </nav>
-
+    <div class="modal hide fade" id="myModal">
+        <div class="modal-header">
+             <a class="close" data-dismiss="modal">×</a>
+             <h3>Enquiry form</h3>
+        </div>
+        <%=render :template => "users/new"%> 
+    </div>
 
 </body>
 </html>
